--- a/App - Android/app/src/main/AndroidManifest.xml
+++ b/App - Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- Permissões -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UfrpeLogin"
         tools:targetApi="31">
+        <!-- Tela de Frequênica | Lado do Professor -->
+        <activity
+            android:name=".FrequenciaHost"
+            android:exported="false" />
+        <!-- Tela de Frequênica | Lado do Aluno -->
         <activity
             android:name=".FrequenciaActivity"
             android:exported="false" />
+        <!-- Tela de Launcher -->
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -32,7 +42,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
