--- a/App - Professor/app/src/main/AndroidManifest.xml
+++ b/App - Professor/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -16,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FrequênciaFederalProfessor"
         tools:targetApi="31">
+        <activity
+            android:name=".CadeirasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListagemActivity"
+            android:exported="false" />
         <activity
             android:name=".FrequenciaHost"
             android:exported="false" />
