CRIAÇÃO DA TELA BANCO DE DADOOS,1 USURÁRIO

--- a/App - Misto/app/src/main/AndroidManifest.xml
+++ b/App - Misto/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
             android:exported="false"/>
         <activity android:name=".Horario"
             android:exported="false"/>
+        <activity android:name=".Cadastrar_bancodados"
+            android:exported="false" />
 
     </application>
 
